# openagent-harness

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
benchmarks/cache-ttl/: task.json
benchmarks/calc-py/: task.json
benchmarks/cli-tool/: task.json
benchmarks/csv-cleaner/: task.json
benchmarks/mini-blog/: task.json
benchmarks/pager-py/: task.json
benchmarks/retry-policy/: task.json
benchmarks_engineering/artifact-query-api/: task.json
benchmarks_engineering/policy-auth-audit/: task.json
benchmarks_realistic/retry-429-real/: task.json
docs/: api_readiness_audit.md  api_tradeoffs.md  architecture.md  boundary_exploration_20260623.md  deepseek_integration.md  deepseek_real_run.md  demo_commands.md  evidence_matrix.md  final_architecture.md  final_release_notes.md  interview_flashcards_cn.md  interview_playbook_cn.md  interview_prep_from_zero_cn.md  interview_qa_cn.md  interview_script.md  openagent_platform_plan.md  openai_fighting_audit_20260620.md  optimization_report.md  roadmap.md  secure_deepseek_key_setup.md  system_design_cn.md  v1_interview_report.md  verification.md
examples/: deepseek_real_task.json  deepseek_task.json  model_profiles.json
scripts/: smoke_retry_429.cmd  smoke_retry_429.ps1
tests/: test_artifact_hygiene.py  test_cli.py  test_compare.py  test_eval.py  test_final_architecture.py  test_gate.py  test_llm_context_policy_agent.py  test_runner_modes.py  test_scoring.py  test_secure_deepseek_env.py  test_tool_registry_newlines.py  test_trace_and_analyzer.py  test_v1_interview_delivery.py  test_workspace_safety.py
(+56 files in other folders)
