[project]
name = "openagent-harness"
version = "0.1.0"
description = "A local-first quality gate, trace, and benchmark harness for coding agents."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
]

[project.optional-dependencies]
api = [
    "litellm>=1.60.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
openagent = "openagent_harness.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["-p", "no:ddtrace", "-p", "no:cov", "-p", "no:json-report", "-p", "no:metadata"]
